unpackaged/main/default/objects/Product2/fields/Booking_Recognition_Method__c.field-meta.xml
<CustomField>
    <fullName>Booking_Recognition_Method__c</fullName>
    <label>Booking Recognition Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Postpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>