unpackaged/main/default/objects/Product2/fields/breadwinner_ns__NetSuite_Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Item</label>
    <referenceTo>breadwinner_ns__BW_Item__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>BWProducts</relationshipName>
    <type>Lookup</type>
</CustomField>