unpackaged/main/default/objects/Product2/fields/Default_Support_SLA__c.field-meta.xml
<CustomField>
    <fullName>Default_Support_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Support SLA</label>
    <referenceTo>Support_SLA__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>