unpackaged/main/default/objects/Product2/fields/Is_Billing_Script_Usage_SKU__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Script_Usage_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Script Usage SKU?</label>
    <type>Checkbox</type>
</CustomField>