unpackaged/main/default/objects/Product2/fields/Is_Platform_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Is_Platform_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Platform Upgrade?</label>
    <type>Checkbox</type>
</CustomField>