unpackaged/main/default/objects/Product2/fields/Marketplace_Dimension_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Dimension_API_Name__c</fullName>
    <label>Marketplace Dimension API Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>