unpackaged/main/default/objects/Product2/fields/Marketplace_Dimension_Description__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Dimension_Description__c</fullName>
    <label>Marketplace Dimension Description</label>
    <length>70</length>
    <type>Text</type>
</CustomField>