unpackaged/main/default/objects/Product2/fields/Marketplace_Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Dimension_Name__c</fullName>
    <label>Marketplace Dimension Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>