unpackaged/main/default/objects/Product2/fields/Num_Opportunities_Booked__c.field-meta.xml
<CustomField>
    <fullName>Num_Opportunities_Booked__c</fullName>
    <label># Opportunities (Booked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>