unpackaged/main/default/objects/Product2/fields/Pricing_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Schedule_Type__c</fullName>
    <label>Pricing Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Usage_Billing_Models</valueSetName>
    </valueSet>
</CustomField>