unpackaged/main/default/objects/Product2/fields/Product_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (Case Safe)</label>
    <type>Text</type>
</CustomField>