unpackaged/main/default/objects/Product2/fields/Product_Tags__c.field-meta.xml
<CustomField>
    <fullName>Product_Tags__c</fullName>
    <label>Product Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Tags</valueSetName>
    </valueSet>
</CustomField>