unpackaged/main/default/objects/Product2/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023-Q2</fullName>
            </value>
            <value>
                <fullName>2024-Q2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>