unpackaged/main/default/objects/Product2/fields/RevOps_SKU_Status__c.field-meta.xml
<CustomField>
    <fullName>RevOps_SKU_Status__c</fullName>
    <label>RevOps SKU Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>