unpackaged/main/default/objects/Product2/fields/Services_Project_Automation__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Automation__c</fullName>
    <label>Services Project: Automation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create at Closed Won</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>