unpackaged/main/default/objects/Product2/fields/Services_Project_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Short_Name__c</fullName>
    <label>Services Project: Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>