unpackaged/main/default/objects/Product2/fields/Services_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Type__c</fullName>
    <label>Services Project: Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetName>Services_Project_Templates</valueSetName>
    </valueSet>
</CustomField>