unpackaged/main/default/objects/Product2/fields/Usage_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Usage_Lower_Bound__c</fullName>
    <label>Usage: Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>