unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Tags__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Platform_Type__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>Unit_Type__c</columns>
    <columns>RevOps_Link__c</columns>
    <columns>RevOps_SKU_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Products</label>
</ListView>