unpackaged/main/default/objects/Product2/listViews/X2023_Q3_Release.listView-meta.xml
<ListView>
    <fullName>X2023_Q3_Release</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Name__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Platform_Type__c</columns>
    <columns>Included_Units__c</columns>
    <columns>Product_Tags__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Usage_Lower_Bound__c</columns>
    <columns>Usage_Upper_Bound__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>2023-Q3 Release</label>
</ListView>